logsOnRasp/HoveringROSA/error
ctc_das@ubiquityrobot:~/motorFailure/uav_agentsHoveringROSA$ ./gradlew
Starting a Gradle Daemon, 3 busy Daemons could not be reused, use --status for details
> Task :compileJava
/home/ctc_das/motorFailure/uav_agentsHoveringROSA/src/java/RosEnv.java:74: error: method publish in class Publisher cannot be applied to given types;
        pub.publish(); //here goes the published parameters (arguments)
           ^
  required: Object
  found:    no arguments
  reason: actual and formal argument lists differ in length
/home/ctc_das/motorFailure/uav_agentsHoveringROSA/src/java/DemoEmbeddedAgentArch.java:18: error: method does not override or implement a method from a supertype
    @Override
    ^
2 errors

> Task :compileJava FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

Deprecated Gradle features were used in this build, making it incompatible with Gradle 8.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.


